feat(functions): init functions

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="./maeco.min.js" charset="utf-8"></script>
   <script type="text/javascript">
     new Maeco.default({
-      envId: 'imaegoo-cloudbase-1376aa'
+      envId: 'imaegoo-16fe3d'
     })
   </script>
 </body>
