chore(rename): twii

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,8 @@
 </head>
 
 <body>
-  <script src="https://imgcache.qq.com/qcloud/tcbjs/1.6.2/tcb.js"></script>
-  <script type="text/javascript" src="./maeco.min.js" charset="utf-8"></script>
   <script type="text/javascript">
-    new Maeco.default({
-      envId: 'imaegoo-16fe3d'
-    })
+    location.href = 'demo.html'
   </script>
 </body>
 
