feat(admin): add admin panel

--- a/public/demo.html
+++ b/public/demo.html
@@ -14,7 +14,8 @@
   <script type="text/javascript">
     function init() {
       twikoo.init({
-        envId: document.getElementById('envId').value
+        envId: document.getElementById('envId').value,
+        el: '#tcomment'
       });
     }
   </script>
@@ -60,7 +61,7 @@
         <div class="column">
           <div class="card">
             <div class="card-content">
-              <div class="twikoo" id="twikoo"></div>
+              <div class="twikoo" id="tcomment"></div>
             </div>
           </div>
         </div>
