* 修复 苹果 logo 垂直不居中 * 修复 表情弹框适配部分主题夜间模式 * 改进 支持自定义文章的 js path

--- a/public/demo.html
+++ b/public/demo.html
@@ -18,8 +18,9 @@
     function init() {
       twikoo.init({
         envId: document.getElementById('envId').value,
+        el: '#tcomment',
         region: document.getElementById('region').value,
-        el: '#tcomment'
+        path: document.getElementById('path').value
       });
     }
   </script>
@@ -56,6 +57,12 @@
             <label class="label">环境地域 | Region: <code>region</code></label>
             <div class="control">
               <input class="input" id="region" type="text" placeholder="e.g ap-guangzhou" value="ap-shanghai">
+            </div>
+          </div>
+          <div class="field">
+            <label class="label">文章路径 | Path: <code>path</code></label>
+            <div class="control">
+              <input class="input" id="path" type="text" placeholder="e.g window.location.pathname" value="window.location.pathname">
             </div>
           </div>
           <div class="field">
