--- a/demo/demo.html
+++ b/demo/demo.html
@@ -55,7 +55,7 @@
           <div class="field">
             <label class="label">环境 ID | Environment ID: <code>envId</code></label>
             <div class="control">
-              <input class="input" id="envId" type="text" placeholder="e.g imaegoo-16fe3d" value="imaegoo-16fe3d">
+              <input class="input" id="envId" type="text" placeholder="e.g imaegoo-16fe3d" value="twikoo-1gs9l0fb17e7897a">
             </div>
           </div>
           <div class="field">
