feat(func): support vercel serverless

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -55,7 +55,7 @@
           <div class="field">
             <label class="label">环境 ID | Environment ID: <code>envId</code></label>
             <div class="control">
-              <input class="input" id="envId" type="text" placeholder="e.g imaegoo-16fe3d" value="twikoo-1gs9l0fb17e7897a">
+              <input class="input" id="envId" type="text" placeholder="e.g imaegoo-16fe3d" value="https://twikoo.vercel.app">
             </div>
           </div>
           <div class="field">
