--- a/demo/demo.html
+++ b/demo/demo.html
@@ -55,19 +55,19 @@
           <div class="field">
             <label class="label">环境 ID | Environment ID: <code>envId</code></label>
             <div class="control">
-              <input class="input" id="envId" type="text" placeholder="e.g imaegoo-16fe3d" value="https://twikoo.vercel.app">
+              <input class="input" id="envId" type="text" placeholder="e.g imaegoo-16fe3d" value="https://doit-docs-comment-twikoo.vercel.app/">
             </div>
           </div>
           <div class="field">
             <label class="label">环境地域 | Region: <code>region</code></label>
             <div class="control">
-              <input class="input" id="region" type="text" placeholder="e.g ap-guangzhou" value="ap-shanghai">
+              <input class="input" id="region" type="text" placeholder="e.g ap-guangzhou" value="">
             </div>
           </div>
           <div class="field">
             <label class="label">文章路径 | Path: <code>path</code></label>
             <div class="control">
-              <input class="input" id="path" type="text" placeholder="e.g window.location.pathname" value="window.location.pathname">
+              <input class="input" id="path" type="text" placeholder="e.g window.location.pathname" value="">
             </div>
           </div>
           <div class="field">
