--- a/demo/demo.html
+++ b/demo/demo.html
@@ -21,6 +21,7 @@
         el: '#tcomment',
         region: document.getElementById('region').value,
         path: document.getElementById('path').value,
+        lang: document.getElementById('lang').value,
         onCommentLoaded: function () {
           console.log('评论加载完成')
         }
@@ -68,6 +69,12 @@
             <label class="label">文章路径 | Path: <code>path</code></label>
             <div class="control">
               <input class="input" id="path" type="text" placeholder="e.g window.location.pathname" value="window.location.pathname">
+            </div>
+          </div>
+          <div class="field">
+            <label class="label">语言 | Language:  <code>lang</code></label>
+            <div class="control">
+              <input class="input" id="lang" type="text" placeholder="e.g en-US" value="en-US">
             </div>
           </div>
           <div class="field">
