feat: support self hosted

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -56,7 +56,7 @@
           <div class="field">
             <label class="label">环境 ID | Environment ID: <code>envId</code></label>
             <div class="control">
-              <input class="input" id="envId" type="text" placeholder="e.g imaegoo-16fe3d" value="https://twikoo.vercel.app">
+              <input class="input" id="envId" type="text" placeholder="e.g imaegoo-16fe3d" value="http://localhost:8080">
             </div>
           </div>
           <div class="field">
