--- a/demo/demo.html
+++ b/demo/demo.html
@@ -87,7 +87,7 @@
             <button class="button is-info" onclick="init()">加载 | Init</button>
           </div>
           <div class="field">
-            <a href="https://twikoo.js.org/quick-start.html#%E5%89%8D%E7%AB%AF%E9%83%A8%E7%BD%B2" target="_blank">如何集成到博客中？</a>
+            <a href="https://twikoo.js.org/frontend.html" target="_blank">如何集成到博客中？</a>
           </div>
         </div>
         <div class="column">
