chore: replace staticfile cdn domain

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <title>Twikoo Demo</title>
-  <link rel="stylesheet" type="text/css" href="https://cdn.staticfile.org/bulma/0.8.2/css/bulma.min.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.staticfile.net/bulma/0.8.2/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="demo.css">
 </head>
