--- a/demo/demo.html
+++ b/demo/demo.html
@@ -15,6 +15,18 @@
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js" integrity="sha384-mll67QQFJfxn0IYznZYonOWZ644AWYC+Pt2cHqMaRhXVrursRwvLnLaebdGIlYNa" crossorigin="anonymous"></script>
   <script type="text/javascript" src="./twikoo.all.min.js" charset="utf-8"></script>
   <script type="text/javascript">
+    function saveToLocalStorage(key) {
+      var value = document.getElementById(key).value;
+      localStorage.setItem('twikoo-demo-' + key, value);
+    }
+    function loadFromLocalStorage() {
+      ['envId', 'region', 'path', 'lang'].forEach(function(key) {
+        var value = localStorage.getItem('twikoo-demo-' + key);
+        if (value !== null) {
+          document.getElementById(key).value = value;
+        }
+      });
+    }
     function init() {
       twikoo.init({
         envId: document.getElementById('envId').value,
@@ -56,25 +68,25 @@
           <div class="field">
             <label class="label">环境 ID | Environment ID: <code>envId</code></label>
             <div class="control">
-              <input class="input" id="envId" type="text" placeholder="e.g imaegoo-16fe3d" value="http://localhost:8080">
+              <input class="input" id="envId" type="text" placeholder="e.g imaegoo-16fe3d" value="http://localhost:8080" oninput="saveToLocalStorage('envId')">
             </div>
           </div>
           <div class="field">
             <label class="label">环境地域 | Region: <code>region</code></label>
             <div class="control">
-              <input class="input" id="region" type="text" placeholder="e.g ap-guangzhou" value="ap-shanghai">
+              <input class="input" id="region" type="text" placeholder="e.g ap-guangzhou" value="ap-shanghai" oninput="saveToLocalStorage('region')">
             </div>
           </div>
           <div class="field">
             <label class="label">文章路径 | Path: <code>path</code></label>
             <div class="control">
-              <input class="input" id="path" type="text" placeholder="e.g window.location.pathname" value="window.location.pathname">
+              <input class="input" id="path" type="text" placeholder="e.g window.location.pathname" value="window.location.pathname" oninput="saveToLocalStorage('path')">
             </div>
           </div>
           <div class="field">
             <label class="label">语言 | Language:  <code>lang</code></label>
             <div class="control">
-              <input class="input" id="lang" type="text" placeholder="e.g en-US" value="zh-CN">
+              <input class="input" id="lang" type="text" placeholder="e.g en-US" value="zh-CN" oninput="saveToLocalStorage('lang')">
             </div>
           </div>
           <div class="field">
@@ -111,6 +123,9 @@
       </div>
     </div>
   </footer>
+  <script type="text/javascript">
+    loadFromLocalStorage();
+  </script>
 </body>
 
 </html>
